# xml-rs

./: .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  Changelog.md  Makefile  README.md  Readme.md  aliases.js  design.md  event_emitter.rs  index.html  search-index.js  settings.html  source-files.js
.github/: FUNDING.yml
.github/workflows/: main.yml
benches/: bench.rs  decoding.rs
data/: sample_1.xml  sample_3.xml
examples/: print_events.rs  rewrite.rs
src/: analyze.rs  attribute.rs  attribute2.rs  attribute_old.rs  chars.rs  common.rs  escape.rs  event.rs  lib.rs  macros.rs  name.rs  name2.rs  name_old.rs  namespace.rs  position.rs  reader.rs  util.rs
src/reader/: buffer.rs  config.rs  decoding_reader.rs  error.rs  error_impl.rs  events.rs  impl_error.rs  indexset.rs  lexer.rs  mod.rs  parser.rs  parsing.rs  str_read.rs  util.rs
src/reader2/: buffer.rs  config.rs  encodings.rs  error.rs  mod.rs  parser.rs
src/reader3/: decoding_reader.rs  error.rs  mod.rs  parser.rs
src/reader_ng/: buffer.rs  config.rs  encodings.rs  error.rs  errors.rs  mod.rs
src/reader_old/: config.rs  error.rs  events.rs  lexer.rs  mod.rs
src/utils/: escape.rs  mod.rs  position.rs
src/writer/: config.rs  emitter.rs  escape.rs  event_builder.rs  event_emitter.rs  events.rs  mod.rs
src/xml/: attribute.rs.html  common.rs  common.rs.html  escape.rs.html  events.rs  lib.rs  lib.rs.html  macros.rs  macros.rs.html  name.rs.html  namespace.rs  namespace.rs.html  util.rs.html
src/xml_analyze/: analyze.rs.html
tests/: errata1e.fail.txt  errata2e.fail.txt  errata3e.fail.txt  errata4e.fail.txt  event_reader.rs  event_writer.rs  ibm_oasis_valid.fail.txt  ibm_valid.fail.txt  oasis.fail.txt  rmt-ns10.fail.txt  rmt-ns11.fail.txt  streaming.rs  sun-not-wf.fail.txt  sun-valid.fail.txt  test_suite_driver.rs  tests.xml  xml11.fail.txt  xmlconf.rs  xmltest.fail.txt
tests/cases/: autosar.xml  quote.xml  xmlnsquote.xml
tests/documents/: bom.xml  sample_1.xml  sample_1_full.txt  sample_1_short.txt  sample_4.xml  sample_5.xml  sample_5_short.txt  sample_7.xml  sample_7_full.txt
tests/event_reader/: sample_2.xml
tests/xml_test_suite/: LICENSE.html  testcases.dtd  xmlconf.xml
xml/: all.html  index.html  struct.EmitterConfig.html  struct.ParserConfig.html
xml/attribute/: index.html  struct.Attribute.html  struct.OwnedAttribute.html
xml/common/: index.html  (+8 more)
xml_analyze/: all.html  fn.main.html  index.html
(+529 files in other folders)
