[package]
name = "xml-rs"
version = "0.8.1"
edition = "2018"
authors = ["Vladimir Matveev <vmatveev@citrine.cc>"]
license = "MIT"
description = "An XML library in pure Rust"
repository = "https://github.com/netvl/xml-rs"
documentation = "https://docs.rs/xml-rs/"
readme = "Readme.md"
keywords = ["xml", "parsing", "parser"]
categories = ["parsing"]

[lib]
name = "xml"
path = "src/lib.rs"

[[bin]]
name = "xml-analyze"
path = "src/bin/analyze.rs"

[[bin]]
name = "xml-debug"
path = "src/bin/debug.rs"

[[bench]]
name = "decoding"
harness = false

[dependencies]
encoding_rs = "0.8.17"
nom = "5.1.0"
nom_locate = "2.0.0"
combine = "4.0.1"
derive_more = "0.99.5"
arraydeque = "0.4.5"
aho-corasick = "0.7.10"

[dev-dependencies]
quickcheck = "0.9.2"
criterion = "0.3.1"
rand = "0.7.3"
encoding = "0.2.33"
itertools = "0.8.2"
regex = "1.3.3"
assert_matches = "1.3.0"
doc-comment = "0.3"
lazy_static = "1.2.0"
