[package]
name = "xml-rs"
version = "0.8.5"
authors = ["Vladimir Matveev <vmatveev@citrine.cc>"]
license = "MIT"
description = "An XML library in pure Rust"
repository = "https://github.com/kornelski/xml-rs"
documentation = "http://docs.rs/xml-rs/"
readme = "README.md"
keywords = ["xml", "parsing", "parser", "sax"]
categories = ["parser-implementations"]
edition = "2018"

[lib]
name = "xml"
path = "src/lib.rs"

[[bin]]
name = "xml-analyze"
path = "src/analyze.rs"

[dev-dependencies]
doc-comment = "0.3"
lazy_static = "1.4"

[badges]
maintenance = { status = "actively-developed" }
