[package]
name = "xml-rs"
version = "0.8.11"
authors = ["Vladimir Matveev <vmatveev@citrine.cc>"]
license = "MIT"
description = "An XML library in pure Rust"
repository = "https://github.com/kornelski/xml-rs"
homepage = "https://lib.rs/crates/xml-rs"
documentation = "https://docs.rs/xml-rs/"
readme = "README.md"
keywords = ["xml", "parser", "sax", "parsing", "writer"]
categories = ["parser-implementations"]
edition = "2021"
rust-version = "1.58"
include = ["src/**", "LICENSE", "README.md"]

[lib]
name = "xml"
path = "src/lib.rs"

[[bin]]
name = "xml-analyze"
path = "src/analyze.rs"

[dev-dependencies]
doc-comment = "0.3"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.release]
tag-name = "{{version}}"
tag-message = ""
